# porqueViven

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANUAL.md  README.md  firebase.json  generate.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: ejemplo_cappi.csv
templates/: 404.html  element.html  index.html
tests/: conftest.py  test_generate.py
